--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>dstream-apps</artifactId>
+    <artifactId>catalog</artifactId>
     <modelVersion>4.0.0</modelVersion>
 
     <dependencies>
