--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -13,6 +13,21 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>depend
+            <artifactId>flink-table-common</artifactId>
+            <version>${flink.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-api-java-bridge_${scala.binary.version}</artifactId>
+            <version>${flink.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/io.github.earthchen/ipplus360-awdb-java -->
         <dependency>
             <groupId>io.github.earthchen</groupId>
